--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+# See https://help.g
 # dependencies
 /node_modules
 /.pnp
